--- a/style.css
+++ b/style.css
@@ -129,3 +129,48 @@
        background:#126688;
        color: white;
     }
+    /* activities css */
+    #activities header{
+        background: no-repeat lightgrey url(images/runfly.jpg);
+        background-image: 1500px;
+    }
+    table{
+        width: 1000px;
+        margin: 4em auto 0 auto;
+    }
+    caption{
+        background: #852b1b;
+        height: 40px;
+        color:#fff;
+        font-size: 1.3em;
+        font-weight: bold;
+        padding-top: 1em;
+    }
+    thead{
+        background: #bde1ff;
+    }
+    tbody{
+        background: #eeffe6;
+        text-align: center;
+    }
+    th, td{
+        width: 225px;
+        height: 75px;
+        vertical-align: middle;
+        border: 1px solid #852b1b;
+    }
+    th:first-child{
+        width: 125px;
+        height: 50px;
+        background: #4977d1;
+        color: #fff;
+    }
+    td:first-child{
+        font-weight: bold;
+        background: #bde1ff;
+    }
+    /* contact css */
+    #contact header{
+        background: no-repeat lightgrey url(images/cliff_rock.jpg);
+        background-image: 1500px;
+    }
