--- a/style.css
+++ b/style.css
@@ -265,3 +265,14 @@
         width: 500px;
         margin: 0;
     }
+    /* timer css */
+    #timeofday{
+        font-family: Arial, Helvetica, sans-serif;
+        color: #3a3a3a;
+        height: 50px;
+        text-align: center;
+        background-image: linear-gradient(0deg, rgba(251,215,139,1) 0%, rgba(118,213,245,1) 100%);
+    }
+    #clock{
+        color: #125688;
+    }
