--- a/style.css
+++ b/style.css
@@ -269,8 +269,11 @@
     #timeofday{
         font-family: Arial, Helvetica, sans-serif;
         color: #3a3a3a;
+        font-size: 14px;
         height: 50px;
         text-align: center;
+        vertical-align: middle;
+        line-height: 45px;
         background-image: linear-gradient(0deg, rgba(251,215,139,1) 0%, rgba(118,213,245,1) 100%);
     }
     #clock{
