renamed folder to homework-session , created new JS file as activity.js , added jquery script code to html

--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@
         font-weight: bold;
         background: #bde1ff;
     }
+    .highlight { color:red; background: yellow;}
     /* contact css */
     #contact header{
         background: no-repeat lightgrey url(images/cliff_rock.jpg);
