added css code for styling

--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@
     td:first-child{
         font-weight: bold;
         background: #bde1ff;
+        color: black;
     }
     .highlight { 
         color:white; 
