--- a/style.css
+++ b/style.css
@@ -175,6 +175,29 @@
         background: #92d034;
         cursor: pointer;
     }
+    #activities main #displaySelected{
+        visibility: hidden;
+        margin: 0 auto;
+        width: 600px;
+        border: 2px solid #92d034;
+        padding: 0.75em;
+    }
+    #activities main #displaySelected #result, #activities main #displaySelected #sendinfo{
+        display: inline-block;
+        margin: 0;
+    }
+    #activities main #result{
+        min-height: 50px;
+        width: 300px;
+        padding: 0;
+    }
+    #activities main #result h4{
+        margin-bottom: 1em;
+        font-size: 1.15em;
+    }
+    #activities main #displaySelected #sendinfo input[type="email"]{
+        width: 200px;
+    }
     /* contact css */
     #contact header{
         background: no-repeat lightgrey url(images/cliff_rock.jpg);
