--- a/style.css
+++ b/style.css
@@ -294,6 +294,55 @@
         width: 500px;
         margin: 0;
     }
+    .lightbox-toggle {
+        color: black;
+    }
+      
+    .backdrop {
+        z-index: 1;
+        opacity: .0;
+        filter: alpha(opacity=0);
+        display: none;
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        background: #000;
+    }
+    .lightbox {
+        z-index: 2;
+        position: fixed;
+        opacity: 1;
+        display: none;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: auto;
+        height: auto;
+        width: 600px;
+        background: #fff;
+        padding: 20px;
+        border-radius: 5px;
+        -moz-box-shadow: 0px 0px 5px #444444;
+        -webkit-box-shadow: 0px 0px 5px #444444;
+        box-shadow: 0px 0px 5px #444444;
+    }
+    
+    * {
+        z-index: 3;
+    }
+    
+    .close {
+        float: right;
+        cursor: pointer;
+    }
+    
+   
+    
+    .lightbox img {
+        width:100%;
+    }
     /* timer css */
     #timeofday{
         font-family: Arial, Helvetica, sans-serif;
