--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
         background-size: 100% 400px;
     }
     .main-header{
-        /* background-color: rgba(38, 41, 61, 0.7); */
         max-width: 700px;
         margin: 2em auto 0 auto;
         min-height: 100px;
@@ -22,18 +21,13 @@
         margin: 0 2rem 0 0;
         float: left;
     }
-     /* navigation */
-    /* .main-menu{
-        margin-left: 227px;
-        font-weight: 400;
-    } */
+   
     .bg-dark {
         background-color: rgba(38, 41, 61, 0.7) !important;
     }
     .main-menu ul li {
         list-style-type: none;
         display: inline-block;
-        /* float: left; */
         padding-left: 25px;
         padding-right: 25px;
         border-left: 1px solid rgba(202, 204, 202, 0.6);
@@ -237,6 +231,9 @@
         margin: 15px 0 0 0;
         font-weight: bold;
     }
+    .form-group{
+        max-width: 400px;
+    }
     input{
         width: 400px;
     }
@@ -259,14 +256,12 @@
         height: 100px;
     }
     #submit{
-        display: block;
-        margin: 20px 0 10px 0;
-        width: 125px;
-        padding: 10px 25px 10px 25px;
-        /* background: #4977D1; */
-        border: none;
-        color: #fff;
-        margin-left: 300px;
+     display: block;
+    margin: 20px auto 10px auto;
+    max-width: 80%; 
+    padding: 10px 25px; 
+    border: none;
+    color: #fff;
     }
     /* cliffs css */
     #cliffs{
@@ -281,7 +276,7 @@
     .wrapper > div {
         margin: 10px;
         text-align: center;
-        flex: 1 0 calc(50% - 20px); /* Two items per row with some spacing */
+        flex: 1 0 calc(50% - 20px);
     }
     
     .Westcliff img,
@@ -376,10 +371,6 @@
     /* media queries */
 
 /* Media Query for extra small screens */
-
-
-
-
 #partners .partner img {
     border-radius: 50%; 
     max-width: 100%; 
